# Long-Form-Content-Intelligence-Engine

./: .dockerignore  .dockerignore 2  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile 2.prod  Dockerfile.prod  Makefile  README.md  alembic.ini  constraints.txt  docker-compose.prod 2.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: .dockerignore  .env.local.example  Dockerfile  README.md  package-lock.json  package.json
migrations/: env.py
migrations/versions/: 0001_init.py  0002_add_source_error.py  0003_add_chunk_char_offsets.py  0004_add_source_updated_at.py
ops/nginx/: app.conf  nginx.conf
scripts/: doctor.sh
scripts/_common/: __init__.py  api_client.py
scripts/eval/: golden_multisource.json  golden_sample.json  golden_verified.json  (+5 more)
tests/: conftest.py  test_answer_auth.py  test_answers_grouped_highlights_read_endpoint.py  test_answers_grouped_read_endpoint.py  test_answers_highlights_read_endpoint.py  test_answers_read_endpoint.py  test_chunking.py  test_debug_endpoints.py  test_eval_verified_fixture_selection.py  test_grouped_endpoints.py  test_highlights.py  test_infer_answer_style.py  test_observability_metrics.py  test_persisted_reads_contract.py  test_rag_citations.py  test_rag_snippets.py  test_rate_limit_backend.py  test_reranker.py  test_url_guard.py  test_verification_consistency.py  test_verification_summary_normalization.py  test_verified_answer_style_contract.py  test_verified_endpoint.py  test_verified_highlights_endpoint.py  test_verify_rewrite.py
(+50 files in other folders)
